--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: python
 python:
-  - "2.7"
+  - "3.6"
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database everyday_test;' -U postgres
 install:
   - pip install -r everyday/requirements.txt
 script:
