--- a/everyday/requirements.txt
+++ b/everyday/requirements.txt
@@ -7,6 +7,7 @@ click==6.7
 coverage==4.4.1
 Flask==0.12.2
 Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.2
 Flask-Migrate==2.0.3
 Flask-RESTful==0.3.5
 Flask-Script==2.0.5
