--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
     "start": "webpack --watch",
     "build": "webpack --optimize-minimize --define process.env.NODE_ENV=\"'production'\"",
     "serve": "webpack-dev-server",
-    "lint": "eslint src/*.js"
+    "lint": "eslint src/**/*.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bcongdon/EveryDay.git"
   },
   "dependencies": {
+    "axios": "^0.16.1",
+    "babel-preset-stage-2": "^6.24.1",
     "csvtojson": "^1.1.5",
     "react": "^15.5.4",
     "react-calendar-heatmap": "^1.1.0",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-form": "^6.7.0",
+    "redux-thunk": "^2.2.0",
+    "universal-cookie": "^2.0.7"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
