--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "parser": "babel-eslint",
   "extends": ["standard", "standard-react"],
   "rules": {
     "space-before-function-paren": "off"
