--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack --watch",
     "build": "webpack --optimize-minimize --define process.env.NODE_ENV=\"'production'\"",
     "serve": "webpack-dev-server",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
