--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.16.1",
     "babel-preset-stage-2": "^6.24.1",
     "csvtojson": "^1.1.5",
+    "jwt-decode": "^2.2.0",
     "react": "^15.5.4",
     "react-calendar-heatmap": "^1.1.0",
     "react-dom": "^15.5.4",
