Move backend validation to marshmallow

--- a/everyday/requirements.txt
+++ b/everyday/requirements.txt
@@ -17,6 +17,7 @@ itsdangerous==0.24
 Jinja2==2.9.6
 Mako==1.0.6
 MarkupSafe==1.0
+marshmallow==2.13.5
 packaging==16.8
 psycopg2==2.7.1
 pycparser==2.17
