--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.68.3",
     "universal-cookie": "^2.0.7"
   },
   "devDependencies": {
