Date picker for entry form

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^15.5.4",
     "react-calendar-heatmap": "^1.1.0",
+    "react-datepicker": "^0.46.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
