--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack --watch",
     "build": "webpack --optimize-minimize --define process.env.NODE_ENV=\"'production'\"",
     "serve": "webpack-dev-server",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "test": "NODE_ENV=test jest"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -46,6 +48,11 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.0.0",
     "eslint-plugin-standard": "^3.0.1",
+    "expect": "^1.20.2",
+    "jest": "^20.0.3",
+    "jwt-simple": "^0.5.1",
+    "nock": "^9.0.13",
+    "redux-mock-store": "^1.2.3",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
