--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --optimize-minimize --define process.env.NODE_ENV=\"'production'\"",
     "serve": "webpack-dev-server",
     "lint": "eslint src/",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest --coverage"
   },
   "repository": {
     "type": "git",
