--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.16.1",
     "babel-preset-stage-2": "^6.24.1",
     "csvtojson": "^1.1.5",
+    "history": "^4.6.1",
     "js-md5": "^0.4.2",
     "jwt-decode": "^2.2.0",
     "react": "^15.5.4",
@@ -26,6 +27,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
     "redux-thunk": "^2.2.0",
