--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "everyday",
+  "name": "eachday",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bcongdon/EveryDay.git"
+    "url": "git+https://github.com/bcongdon/EachDay.git"
   },
   "dependencies": {
     "axios": "^0.16.1",
@@ -62,7 +62,7 @@
   "author": "Benjamin Congdon",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bcongdon/EveryDay/issues"
+    "url": "https://github.com/bcongdon/EachDay/issues"
   },
-  "homepage": "https://github.com/bcongdon/EveryDay#readme"
+  "homepage": "https://github.com/bcongdon/EachDay#readme"
 }
