--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "webpack-dev-server --progress",
     "lint": "eslint src/",
     "test": "NODE_ENV=test jest --coverage",
+    "test:update": "NODE_ENV=test jest --coverage --updateSnapshot",
     "profile": "webpack --profile --json > webpack-stats.json"
   },
   "repository": {
@@ -45,6 +46,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.1",
+    "enzyme": "^2.8.2",
+    "enzyme-to-json": "^1.5.1",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-config-standard-react": "^5.0.0",
