--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "jest": "^20.0.3",
     "jwt-simple": "^0.5.1",
     "nock": "^9.0.13",
+    "react-test-renderer": "^15.5.4",
     "redux-mock-store": "^1.2.3",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
