--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-responsive": "^1.3.0",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
+    "react-scroll": "^1.5.2",
     "react-tooltip": "^3.3.0",
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
