--- a/eachday/requirements.txt
+++ b/eachday/requirements.txt
@@ -13,12 +13,14 @@ Flask-RESTful==0.3.5
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
+freezegun==0.3.9
 itsdangerous==0.24
 Jinja2==2.9.6
 Mako==1.0.6
 MarkupSafe==1.0
 marshmallow==2.13.5
 packaging==16.8
+pbr==3.0.1
 psycopg2==2.7.1
 pycparser==2.17
 PyJWT==1.5.0
