Ctrl-n to open entry modal

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "js-md5": "^0.4.2",
     "jwt-decode": "^2.2.0",
     "lodash.map": "^4.6.0",
+    "mousetrap": "^1.6.1",
     "react": "^15.5.4",
     "react-calendar-heatmap": "^1.1.0",
     "react-datepicker": "^0.46.0",
